--- a/src/BusinessCredit/BusinessCreditComponent.css
+++ b/src/BusinessCredit/BusinessCreditComponent.css
@@ -1,84 +1,88 @@
+/* BusinessCreditComponent.css */
+
 .business-container {
-    display: flex;
-    padding: 2rem;
-    gap: 1rem;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: column;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  gap: 1rem;
+  text-align: center;
+}
+
+.business-content {
+  flex: 1 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.business-title {
+  font-weight: bold;
+  max-width: 40rem;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+}
+
+.business-description {
+  max-width: 30rem;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+.business-apply-btn {
+  padding: 0.5rem 1rem;
+  background-color: #007BFF;
+  color: white;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1.25rem;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+
+.business-apply-btn:hover {
+  background-color: #0056b3;
+}
+
+.business-note {
+  font-size: 0.875rem;
+  margin-top: 1rem;
+}
+
+.business-image-container {
+  height: 20rem;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+.business-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+/* Responsive styles */
+
+@media (min-width: 768px) {
+  .business-container {
+    gap: 2rem;
   }
-  
-  .business-content {
-    flex: 1;
-    position: relative;
-  }
-  
+
   .business-title {
-    font-weight: bold;
-    max-width: 40rem;
-    white-space: pre-line;
-    margin-bottom: 1rem;
     font-size: 2rem;
   }
-  
+
   .business-description {
-    max-width: 30rem;
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+    font-size: 1.2rem;
   }
-  
-  .business-apply-btn {
-    display: inline-block;
-    padding: 0.5rem 1rem;
-    background-color: #007BFF;
-    color: white;
-    border-radius: 5px;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  .business-note {
-    font-size: 0.875rem;
-    margin-top: 1rem;
-  }
-  
-  .business-image-wrapper {
-    display: flex;
-    align-items: center;
-  }
-  
-  .business-image-container {
-    overflow: hidden;
-    height: 20rem;
-    position: relative;
+}
 
+@media (min-width: 980px) {
+  .business-container {
+    flex-direction: row;
   }
-  
-  .business-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-  }
-  
-  /* Responsive styles */
-  
-  @media (min-width: 768px) {
-    .business-container {
-      gap: 2rem;
-    }
-  
-    .business-title {
-      font-size: 3rem;
-    }
-  
-    .business-description {
-      font-size: 2rem;
-    }
-  }
-  
-  @media (min-width: 980px) {
-    .business-container {
-      flex-direction: row;
-    }
-
 }
