--- a/src/BusinessCredit/BusinessCreditSecondSection.css
+++ b/src/BusinessCredit/BusinessCreditSecondSection.css
@@ -1,42 +1,43 @@
 .qualificationWrapper {
-    padding: 10px 4%;
-    display: flex;
-    background-color: rgb(240,240,240);
-    flex-direction: column;
-    max-width: 960px;
-    margin: 0 auto;
-    border-radius: 5px;
-    align-items: center;
-  }
-  
-  .titleWrapper h2 {
-    font-size: 3rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-  }
-  
-  .criteriaWrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
-  
-  .criteriaItem {
-    padding-right: 3%;
-    display: flex;
-    align-items: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-  }
-  
-  .criteriaItem img {
-    margin-right: 1rem;
-    height: 32px;
-    width: 32px;
-  }
-  
-  .criteriaItem h4 {
-    white-space: pre;
-    font-size: 1rem;
-  }
-  
+  padding: 10px 4%;
+  display: flex;
+  background-color: #f4f4f4;
+  flex-direction: column;
+  max-width: 960px;
+  margin: 0 auto;
+  border-radius: 5px;
+  align-items: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
+  border: 2px solid #7a5641; /* Add a border with a blue color (#007BFF) */
+}
+
+.titleWrapper h2 {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.criteriaWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.criteriaItem {
+  padding-right: 3%;
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.criteriaItem img {
+  margin-right: 1rem;
+  height: 32px;
+  width: 32px;
+}
+
+.criteriaItem h4 {
+  white-space: pre;
+  font-size: 1rem;
+}
