--- a/src/components/FirstSection.css
+++ b/src/components/FirstSection.css
@@ -1,3 +1,5 @@
+/* FirstSection.css */
+
 .section-container {
     position: relative;
     overflow: hidden;
@@ -31,14 +33,6 @@
     }
 }
 
-.decorative-image {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    max-width: 100%; /* Ensure the image doesn't exceed its container's width */
-    height: auto; /* Allow the image to adjust its height proportionally */
-}
-
 .text-content {
     margin-top: 16px;
     text-align: center;
@@ -47,24 +41,28 @@
 .text-content h1 {
     font-weight: 700;
     margin-bottom: 6px;
-    font-size: 2.875rem;
-    line-height: 3.125rem;
+    font-size: 2.5rem;
+    line-height: 1.3;
 }
 
-.text-content h3 {
+.subheading {
     font-size: 1.25rem;
-    line-height: 1.625rem;
-    font-weight: 400;
-    margin-bottom: 6px;
+    margin-bottom: 12px;
 }
 
 .cta-button {
     display: inline-block;
-    padding: 10px 15px;
+    padding: 10px 20px;
     background-color: #333;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.cta-button:hover {
+    background-color: #555;
 }
 
 .image-content figure {
@@ -75,4 +73,3 @@
     max-width: 15rem;
     height: auto;
 }
-
