--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 15px 30px;
-    background-color: #990000;
+    background-color: #AA0000;
     color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-family: 'Quicksand', sans-serif;
 }
 /* Add this to your CSS */
 .scrolled {
@@ -13,7 +16,7 @@
     top: 0;
     left: 0;
     right: 0;
-    background-color: #990000;
+    background-color: #AA0000;
     z-index: 1000; /* Ensure it's above other content */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
@@ -31,6 +34,7 @@
 .navbar-right {
     display: flex;
     align-items: center;
+    font-weight: bold;
 }
 
 .nav-item {
@@ -76,7 +80,7 @@
         position: relative;
         top: 100%;
         left: 0;
-        background-color: #990000;
+        background-color: #AA0000;
         border-top: 2px solid;
         opacity: 0;  /* Initially invisible */
         transform: translateY(-20px);  /* Initially positioned slightly upwards */
