--- a/src/components/AboutUs.css
+++ b/src/components/AboutUs.css
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    align-items: center;
 }
 
 .aboutUsImageWrap {
@@ -67,7 +68,7 @@
 }
 
 .aboutUsTeamImg {
-    width: 100%;
+    width: 22rem;
     display: block;
     object-fit: cover;
     border-radius: 0.5rem;
