--- a/src/components/Program.css
+++ b/src/components/Program.css
@@ -1,11 +1,5 @@
 /* Program.css */
 
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-}
 
 .programs {
     max-width: 1100px;
@@ -34,11 +28,33 @@ body {
     background: #f9f9f9;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform .2s ease-in-out;
+    cursor: pointer; /* Indicates clickability */
+    position: relative; /* Allows absolute positioning of children */
 }
 
 .program-card:hover {
     transform: translateY(-10px);
 }
+
+.program-description {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 88%;
+    background: rgba(0, 0, 0, 0.8); 
+    color: white; 
+    text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.2);
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    transition: opacity 0.3s ease; 
+    border-radius: 5px; 
+    padding: 20px; 
+    overflow-y: auto; /* Allows vertical scrolling */
+    font-size: 15px;
+}
+
+
 
 .program-image {
     width: 100%;
@@ -53,7 +69,7 @@ body {
     color: #444;
 }
 
-.program-card p {
+.progamp {
     padding: 0 10px;
     color: #777;
     font-size: 16px;
