--- a/src/BusinessCredit/BusinessCreditComponent.css
+++ b/src/BusinessCredit/BusinessCreditComponent.css
@@ -1,88 +1,104 @@
-/* BusinessCreditComponent.css */
-
 .business-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  margin: 0 auto;
   padding: 2rem;
-  gap: 1rem;
-  text-align: center;
+  background-color: #f4f4f4;
+  padding-top: 80px;
+
+}
+
+.content-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  max-width: 1200px;
+  margin: auto;
+  background-color: #2c3e50;
+  border-radius: 15px;
+  overflow: hidden;
 }
 
 .business-content {
-  flex: 1 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: absolute;
+  max-width: 600px;
+  z-index: 2;
+  left: 5%;
+  color: #fff;
+  padding: 10px; /* Added Padding */
+  background-color: rgba(0, 0, 0, 0.5); /* Added Background Color */
+  border-radius: 8px; /* Added Border Radius */
 }
 
+
 .business-title {
-  font-weight: bold;
-  max-width: 40rem;
-  margin-bottom: 1rem;
-  font-size: 2rem;
+  font-size: 2.5em;
 }
 
 .business-description {
-  max-width: 30rem;
-  font-size: 1.2rem;
-  margin-bottom: 1rem;
+  font-size: 1.2em;
+  margin: 20px 0;
 }
 
 .business-apply-btn {
-  padding: 0.5rem 1rem;
-  background-color: #007BFF;
-  color: white;
-  border-radius: 5px;
-  text-decoration: none;
-  cursor: pointer;
-  font-size: 1.25rem;
+  background-color: #e67e22;
+  color: #fff;
   border: none;
-  transition: background-color 0.3s ease;
+  padding: 15px 30px;
+  font-size: 1.1em;
+  cursor: pointer;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Added box-shadow to transition */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Added Box Shadow */
 }
 
+
 .business-apply-btn:hover {
-  background-color: #0056b3;
+  background-color: #d35400;
+  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.2); /* Adjusted Box Shadow on Hover */
 }
 
 .business-note {
-  font-size: 0.875rem;
-  margin-top: 1rem;
+  font-size: 0.9em;
+  margin-top: 20px;
 }
 
 .business-image-container {
-  height: 20rem;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  display: flex;
-  align-items: center;
+  position: relative;
 }
 
 .business-image {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 10px;
+  transition: transform 0.5s ease-in-out;
 }
 
-/* Responsive styles */
+.business-image:hover {
+  transform: scale(1.1);
+}
 
-@media (min-width: 768px) {
-  .business-container {
-    gap: 2rem;
+/* Responsive design */
+@media only screen and (max-width: 992px) {
+  .content-image {
+      flex-direction: column;
+      height: auto;
+  }
+
+  .business-content {
+      position: relative;
+      max-width: 90%;
+      text-align: center;
+      padding: 20px;
+      left: 0;
   }
 
   .business-title {
-    font-size: 2rem;
+      font-size: 2em;
   }
 
-  .business-description {
-    font-size: 1.2rem;
-  }
-}
-
-@media (min-width: 980px) {
-  .business-container {
-    flex-direction: row;
+  .business-content,
+  .business-image-container {
+      max-width: 100%;
+      margin-bottom: 30px;
   }
 }
