--- a/src/components/FirstSection.css
+++ b/src/components/FirstSection.css
@@ -1,75 +1,69 @@
-/* FirstSection.css */
-
 .section-container {
-    position: relative;
-    overflow: hidden;
-}
-
-.section-inner {
-    max-width: 100%;
-    padding-bottom: 20px;
-}
-
-.header-bg {
-    background: linear-gradient(to bottom, #fde0e0, #fdc4c9);
-    padding: 8px 5px 24px;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    min-height: 30vh;  /* Updated from 100vh to 30vh */
+    background: linear-gradient(to right, #2c3e50, #4c6375);
+    color: #ecf0f1;
+    padding: 50px 10px;
+    padding-top: 70px;
 }
-
 .content-container {
-    position: relative;
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
-}
-
-@media (min-width: 768px) {
-    .content-container {
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 16px 24px;
-    }
-}
-
-.text-content {
-    margin-top: 16px;
-    text-align: center;
+    max-width: 1200px;
+    width: 100%;
+    gap: 40px; 
 }
 
 .text-content h1 {
-    font-weight: 700;
-    margin-bottom: 6px;
     font-size: 2.5rem;
-    line-height: 1.3;
+    margin-bottom: 20px;
+    font-weight: bold;
 }
 
 .subheading {
     font-size: 1.25rem;
-    margin-bottom: 12px;
+    margin-bottom: 20px;
+    line-height: 1.6;
+    text-align: center;
 }
 
 .cta-button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #333;
+    background-color: #e67e22; 
     color: #fff;
-    text-decoration: none;
+    padding: 15px 30px;
+    font-size: 1rem;
+    border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 .cta-button:hover {
-    background-color: #555;
-}
-
-.image-content figure {
-    margin-bottom: -40px; 
+    background-color: #d35400; 
 }
 
 .image-content img {
-    max-width: 15rem;
+    max-width: 68%;
     height: auto;
+    border-radius: 15px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+@media (min-width: 768px) {
+    .content-container {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .text-content {
+        text-align: left;
+    }
+
+    .subheading {
+        text-align: left;
+    }
 }
