--- a/src/components/Program.css
+++ b/src/components/Program.css
@@ -7,6 +7,7 @@
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    padding-top: 70px;
 }
 
 .programs h1 {
